styles/style.css
body {
    margin: 0;
    padding: 0;
}
a {
    text-decoration: none;
}

header {
    text-align: center;
    text-transform: uppercase;
    font-family: 'Helvetica Neue';
    margin: auto;
}
    header h1 {
        letter-spacing: 18px;
        line-height: 100%;
        font-weight: 600;
        font-size: 72px;
        margin: 10% 0% 5% 0%;
    }
        header h1 a {
            color: rgba(25, 25, 25, 1);
        }
        header h1 a:hover {
            color: rgba(0, 0, 0, 0.7);
        }

    header nav {
        font-size: 12px;
        line-height: 150%;
        letter-spacing: 1.5px;
        margin: 5% 5% 10% 0%;
    }
        header nav ul {
            list-style: none;
        }
            header nav ul li {
                display: inline-block;
                padding: 0% 2% 0% 2%;
            }
                header nav ul li a {
                    color: rgba(0, 0, 0, 0.699);
                }
                    header nav ul li a:hover {
                        color: rgba(0, 0, 0, 0.171);
                    }

main {
    background-color: #FFF;
    font-family: 'Helvetica Neue';
    max-width: 650px;
    line-height: 1.6;
    margin: auto;
}
    main p {

    }

footer {
    text-align: center;
    margin: 10% 0 0 0;
}
    footer ul {
        list-style: none;
    }
        footer ul li {
            display: contents;
        }
            footer ul li a img {
                width: px;
                opacity: .7;
            }
                footer ul li a img:hover {
                    opacity: 1;
                }

/* social media icons */
#social-link-github {
    width: 25px;

}
#social-link-linkedin {
    width: 30px;
}/* ----- */

#aboutme-pic {
    width: 30%;
    display: block;
    margin: auto;
}
#homepage-pic {
    width: 375px;
    display: block;
    margin: auto;
}

/* home greeting */
#homepage-greeting p {
    text-align: right;
    font-size: 12px;
    font-family: 'Courier New', Courier, monospace;
}
/* project names*/
.project-name {
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
}
/* project page */
.image-list {
    list-style: none;
    display: flex;
}
    a.image-preview img {
        height: 150px;
        margin: 0px 50px 0px 0px;
        box-shadow: 0px 0px 5px rgba(0,0,0,.5);
    }
        .image-preview:hover {
            opacity: .7;
        }
    a.image-preview-lots img {
        height: 150px;
        margin: 0px 30px 0px -20px;

    }
#before {
    position: relative;
    width: 100%;
}
#after {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .3s ease;
}
#before:hover #after {
    opacity: 1;
}

